<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_import">Import</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_slideshow">Slideshow</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="styling_android">Styling Android</string>
    <string name="message_empty">empty</string>
    <string name="title_activity_item_add">ItemAddActivity</string>
    <string name="app_name">퍼센트 상담사용</string>
    <string name="skip">건너뛰기</string>
    <string name="end">완료</string>
    <string name="start_intro">시작하기</string>
    <string name="how_to">핼로머니 이용 안내</string>
    <string name="faq">자주 묻는 질문(FAQ)</string>
    <string name="contact">연락처(문의)</string>
    <string name="loan_postscript">대출 후기</string>
    <string name="ongoing_loan">진행 중 견적</string>
    <string name="finish_loan">종료된 견적</string>
    <string name="my_loan">내 견적 요청함</string>
    <string name="main_ment_1">최저금리를 찾는 확실한 방법</string>
    <string name="main_ment_2">주택담보대출은 헬로머니!</string>
    <string name="main_button_ment">새 견적요청 하기</string>
    <string name="current_quotation">현재 견적 수</string>
    <string name="request_quotation">견적 요청</string>
    <string name="my_quotation">내 견적 요청함</string>
    <string name="quotation_result">견적 요청 결과</string>
    <string name="quotation_result_count">견적 수</string>
    <string name="quotation_list">견적 리스트</string>
    <string name="average_mola">평균 금리</string>
    <string name="quotation_detail">견적 요청 상세</string>
    <string name="show_detail">상세보기 +</string>
    <string name="operation_guide">이용 안내</string>
    <string name="quotation_detail_write_comment">대출 후기 작성하기</string>
    <string name="postscript_detail">대출 후기 상세</string>
    <string name="loan_interest_rate">대출 금리</string>
    <string name="interest_type">금리 방식</string>
    <string name="go_counselor">상담사 보기</string>
    <string name="counselor_detail">상담사 상세</string>
    <string name="monthly_repay_money">월 평균 상환액</string>
    <string name="repay_type">상환 방식</string>
    <string name="back">뒤로 가기</string>
    <string name="request_counsel">상담 신청하기</string>
    <string name="write_comment">후기 작성하기</string>
    <string name="write_comment_please">후기를 작성해주세요.</string>
    <string name="hello_money_service_contact">퍼센트 서비스 문의</string>
    <string name="hello_money_kakao_contact">핼로머니 카카오 문의</string>
    <string name="kakao_talk">카카오톡</string>
    <string name="kakao_talk_id">percent</string>
    <string name="telephone">전화번호</string>
    <string name="hello_money_telephone">070&#8211;8237&#8211;8282</string>
    <string name="email">이메일</string>
    <string name="hello_money_email">help@percent.co.kr</string>
    <string name="operation_time">운영시간</string>
    <string name="hello_money_operation_time">평일 10:00 ~ 19:00</string>
    <string name="check_id_and_registered_id_url">http://52.78.186.37:3000/clients/customers/</string>
    <string name="my_request_quotation_url">http://52.78.186.37:3000/clients/requests?customerId=%1$s&amp;&amp;exceptCompletedRequest=%2$s</string>
    <string name="request_quotation_url">http://52.78.186.37:3000/clients/requests</string>
    <string name="my_request_quotation_ongoing_done_url">http://52.78.186.37:3000/clients/requests/calculate?customerId=%s</string>
    <string name="get_post_script_url">http://52.78.186.37:3000/clients/reviews?page=1&amp;count=30</string>
    <string name="my_quotation_list_url">http://52.78.186.37:3000/clients/requests/%s</string>
    <string name="quotation_detail_counselor_feedback_url">http://52.78.186.37:3000/clients/estimates?requestId=%s</string>
    <string name="my_quotation_detail_url">http://52.78.186.37:3000/clients/requests/%s</string>
    <string name="my_quotation_feedback_detail_url">http://52.78.186.37:3000/clients/estimates/%s</string>
    <string name="request_counsel_url">http://52.78.186.37:3000/clients/requests/%s</string>
    <string name="write_post_script_url">http://52.78.186.37:3000/clients/reviews</string>
    <string name="detail_counselor_url">http://52.78.186.37:3000/clients/agents/%s</string>
    <string name="detail_counselor_post_script_list_url">http://52.78.186.37:3000/clients/agents/%s/reviews</string>
    <string name="request_region1_url">http://52.78.186.37:3000/clients/apts/regions1/</string>
    <string name="request_region2_url">http://52.78.186.37:3000/clients/apts/regions1/%s/regions2</string>
    <string name="request_region3_url">http://52.78.186.37:3000/clients/apts/regions1/%1$s/regions2/%2$s/regions3</string>
    <string name="request_apt_url">http://52.78.186.37:3000/clients/apts/regions1/%1$s/regions2/%2$s/regions3/%3$s/aptNames</string>
    <string name="request_apt_size_url">http://52.78.186.37:3000/clients/apts/regions1/%1$s/regions2/%2$s/regions3/%3$s/aptNames/%4$s</string>
    <string name="faq_url">http://52.78.186.37:3000/commons/faqs</string>
    <string name="post_script_interest_url">http://52.78.186.37:3000/clients/reviews/collected/%s</string>
    <string name="post_script_detail_url">http://52.78.186.37:3000/clients/reviews/%s</string>
    <string name="selected_feedback_detail_url">http://52.78.186.37:3000/clients/reviews/agents/%s</string>
    <string name="url_success">SUCCESS</string>
    <string name="url_no_data">NO_DATA</string>
    <string name="url_message">msg</string>
    <string name="url_data">data</string>
    <string name="send">전송</string>
    <string name="write_price">금액을 입력해주세요.(만원단위)</string>
    <string name="choose_apt">아파트 선택하러 가기</string>
    <string name="loan_type_1">주택 담보 대출</string>
    <string name="loan_type_2">전세 자금 대출</string>
    <string name="select_region_1">시/도 선택하기</string>
    <string name="confirm_all_information">네. 모든 정보가 맞습니다.</string>
    <string name="fix">수정</string>
    <string name="test">testing text for HelloMoney.</string>
    <string name="close_ment">\'뒤로\' 버튼 한번 더 누르시면 종료됩니다.</string>
    <string name="navi_info">퍼센트 이용 안내</string>
    <string name="navi_faq">자주 묻는 질문(FAQ)</string>
    <string name="navi_contact">고객센터(연락처)</string>
    <string name="bottom_navi_main">요청목록</string>
    <string name="bottom_navi_agent">내 견적</string>
    <string name="bottom_navi_item">마이페이지</string>
    <string name="bottom_navi_notice">공지사항</string>


    <string name="kakao_app_key">500b820edcfc3d74cd4fb239bde593ab</string>
    <string name="error_message_for_service_unavailable">서비스 연결상태가 좋지 않습니다.\n\n잠시 후 다시 시도해 주세요.</string>
</resources>
