<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hellmoney.thca.view.ContactActivity">

    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_marginTop="40dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/contact_icon"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/pointTypo"
        android:textSize="20sp"
        android:text="@string/hello_money_service_contact"/>

    <LinearLayout
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium"
                android:textColor="@color/normalTypo"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/operation_time"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium"
                android:textColor="@color/pointTypo"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/hello_money_operation_time"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium"
                android:textColor="@color/normalTypo"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium"
                android:textColor="@color/pointTypo"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/hello_money_email"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium"
                android:textColor="@color/normalTypo"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/telephone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium"
                android:textColor="@color/pointTypo"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/hello_money_telephone"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium"
                android:textColor="@color/normalTypo"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/kakao_talk"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/medium"
                android:textColor="@color/pointTypo"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/kakao_talk_id"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/call"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/call_image"/>

            <ImageView
                android:id="@+id/kakaoTalk"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/kakao_talk_image"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>